Modificación de la estructura del codigo para generar PDF V.2

--- a/Template/template.html
+++ b/Template/template.html
@@ -38,20 +38,16 @@
     
   </style>
   <body>
-    <header id="pageHeader-first" class="page" >
+    <header id="pageHeader" class="page" >
       <img style="position: absolute; z-index: -100;"  class="signature-sumed" src="https://www.sumed.com.mx/assets/img/logo/sumed-logo.png" alt="">
-      
         <p style="color: rgb(48, 47, 47); margin:0px; text-align: center; font-family: sans-serif; font-size: 1rem; ">SUMINISTROS MEDICOS DE MEXICO SA DE CV</p>
         <p style="color: rgb(48, 47, 47); margin:0px; text-align: center; font-family: sans-serif; font-size: 1rem; ">REPORTE DE EMPLEADOS</p>
         <p style="color: rgb(65, 64, 64); margin:0px; text-align: center; font-family: sans-serif; font-size: 0.8rem; ">{{date}} </p>
-      
-      
-      
     </svg>
     </header>
     <section class="page">  
-      <table class="table" >
-        <thead>
+      <table  class="table" >
+        <thead >
           <tr>
             <th>Id</th>
             <th>Nombre</th>
